connect feeds partial done
